Updating and adding some vis

--- a/output/NorthernHemisphereTemps.Rmd
+++ b/output/NorthernHemisphereTemps.Rmd
@@ -2,7 +2,9 @@
 title: "Northern Hemisphere"
 author: "David Meza"
 date: "8/1/2017"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
