--- a/shinyDash/R4DSLearningGroup/R4dsLearnersMentors.Rmd
+++ b/shinyDash/R4DSLearningGroup/R4dsLearnersMentors.Rmd
@@ -10,6 +10,7 @@ output:
 library(flexdashboard)
 library(leaflet)
 library(glue)
+library(dplyr)
 ```
 
 Column {}
@@ -18,13 +19,22 @@ Column {}
 ### Learners and Mentors
 
 ```{r}
-load("~/Google Drive/MezaEdD/r4dsUsers.rdata")
+load("r4dsUsers.rdata")
 
 # Create leaflet map and popup to identify users comfort in R and analysis
 leaflet() %>%
   addTiles() %>%
-  addCircleMarkers(data = r4ds_users, lng = ~ lon, lat = ~ lat,
-                   popup = glue('My R Comnfort is {r4ds_users$R_Comfort} ,', ' My Analysis Comfort is {r4ds_users$Analysis_Comfort}'))
+    addCircleMarkers(data = r4ds_users, lng = ~ lon, lat = ~ lat, group = "Members", color = "blue",
+                   popup = glue('My R Comnfort is {r4ds_users$R_Comfort} ,', ' My Analysis Comfort is {r4ds_users$Analysis_Comfort}')) %>%
+    addCircleMarkers(data = filter(r4ds_users, Type == "Mentor"), lng = ~ lon, lat = ~ lat, group = "Mentor", color = "green",
+                     popup = glue('My R Comnfort is {r4ds_users$R_Comfort} ,', ' My Analysis Comfort is {r4ds_users$Analysis_Comfort}')) %>% 
+    addCircleMarkers(data = filter(r4ds_users, Type == "Learner"), lng = ~ lon, lat = ~ lat, group = "Learner", color = "orange", 
+                     popup = glue('My R Comnfort is {r4ds_users$R_Comfort} ,', ' My Analysis Comfort is {r4ds_users$Analysis_Comfort}')) %>% 
+    hideGroup("Mentor") %>% 
+    hideGroup("Learner") %>% 
+    addLayersControl(baseGroups = "Members", overlayGroups = c("Members", "Mentor", "Learner"),
+                     options = layersControlOptions(collapsed = FALSE))
+
 
 ```
 
